TestEgl: Removed redundant/unused code

https://bugzilla.gnome.org/show_bug.cgi?id=788550